--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </div>
         
     </div>
-
+    <footer>
+        <p>&copy; 2024 Seth. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
