--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
         
     </div>
-    <footer>
-        <p>&copy; 2024 Seth. All rights reserved.</p>
+    <footer class="footer">
+        <p>&copy; Seth 2024</p>
     </footer>
 </body>
 
