--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
     <footer class="footer">
         <p>&copy; Seth 2024</p>
+        <img src="https://media.tenor.com/WcD6euyUl8oAAAAi/omen-valorant-valorant.gif" alt="Footer GIF" class="footer-gif">
     </footer>
 </body>
 
